# live_template

./: .gitignore  README.md  pyproject.toml
src/live_template/adapters/: aiogram_router.py
src/live_template/core/: __init__.py  core.py
src/live_template/core/router/: base_router.py
src/live_template/core/storage/: parser.py  storage.py
src/live_template/core/templates/: live_template_start.py
src/live_template/core/templates/examples/: default_template_with_adjusted_buttons.py  default_template_with_full_mapped_buttons.py
src/live_template/core/utils/: utils.py
src/live_template/core/watcher/: watcher.py
